<resources>
    <string name="facebook_app_id">293320568283992</string>
    <string name="fb_login_protocol_scheme">fb293320568283992</string>
    <string name="default_web_client_ID">125094146390-htaonr2jinqn6p806rr16frde0qta1mh.apps.googleusercontent.com</string>
    <string name="app_name">Schedly</string>
    <string name="sign_up_button"><![CDATA[Sign Up >]]></string>
    <string name="sign_in_button"><![CDATA[Sign In >]]></string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="Welcome">Welcome</string>
    <string name="register_button_main"><![CDATA[< Sign Up]]></string>
    <string name="register_text">Want to register with email?</string>
    <string name="act_main_google">Sign In With Google</string>
    <string name="act_SPNumber_Number">Phone number</string>
    <string name="select_profession">Select your profession</string>
    <string name="act_SProfession_BUT_Hairstylist">Hairstylist</string>
    <string name="act_SProfession_BUT_Dentist">Dentist</string>
    <string name="act_SProfession_BUT_Freelancer">Freelancer</string>
    <string name="act_SProfession_BUT_HouseSitter">House Sitter</string>
    <string name="act_SProfession_BUT_PersonalTrainer">Personal Trainer</string>
    <string name="act_SPNumber_NumberExtra">Please insert your phone number</string>
    <string name="act_SProfession_TV_Extra">You can change this anytime</string>
    <string name="act_SProfession_BUT_Other">Other</string>
    <string name="act_SWHours_TV_Title">Your working hours</string>
    <string name="act_SWHours_TV_TitleExtra">Please select your working days and insert your working hours. You can change these settings at any time!</string>
    <string name="act_SWHours_CB_DiffHours">Different schedule each day</string>
    <string name="act_SWHours_Spinner_TitleStart">Opening hour</string>
    <string name="act_SWHours_Spinner_TitleEnd">Closing hour</string>
    <string name="act_SWHours_TV_AllDay">All week days</string>
    <string name="act_SWHours_TV_Sunday">Sunday</string>
    <string name="act_SWHours_TV_Saturday">Saturday</string>
    <string name="act_SWHours_CB_FreeDay">Free</string>
    <string name="act_SWHours_TV_Friday">Friday</string>
    <string name="act_SWHours_TV_Tuesday">Tuesday</string>
    <string name="act_SWHours_TV_Wednesday">Wednesday</string>
    <string name="act_SWHours_TV_Thursday">Thursday</string>
    <string name="act_SWHours_TV_Monday">Monday</string>
    <string name="act_SUWEmail_TV_Register">Schedly</string>
    <string name="act_main_TV_SignIn">Schedly</string>
    <string name="act_main_TV_ForgotPassword">Forgot?</string>
    <string name="act_SDuration_TV_Title">One last step</string>
    <string name="act_SDuration_TV_TitleExtra">Please insert how much time does your services usually take. This will be used to make appointments automatically! Also, don\'t forget to set your display name!</string>
    <string name="act_SDuration_Hint_TI">Duration in minutes</string>
    <string name="permission_alert_dialog_SMS">SMS Permission</string>
    <string name="permission_alert_dialog_LOG">Call Log Permission</string>
    <string name="permission_dialog_SMS_body">Schedly will now request send/read SMS and read call logs permission on your device. This is essential in order for Schedly to work properly!</string>
    <string name="permission_alert_dialog_OK">OK</string>
    <string name="or">OR</string>
    <string name="act_main_TV_SingUp">Don\'t have an account? <u>Sign up here!</u></string>
    <string name="txt_Monday">s</string>
    <string-array name="hours_array">
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
        <item>0:00</item>
    </string-array>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="act_FPassword_TV_Head">Forgot Password</string>
    <string name="act_FPassword_BUT_Send"><![CDATA[Send >]]></string>
    <string name="act_SDuration_Hint_TI_DisplayName">Display name</string>
    <string name="act_FPassword_TV_Head_Extra">Please enter your email address to reset your password</string>
    <string name="popup_appointment_TV_Message">Send SMS</string>
    <string name="popup_appointment_TV_Call">Call client</string>
    <string name="popup_appointment_TV_AddToContacts">Add number to contacts</string>
    <string name="act_Calendar_IV_CD_Settings">Settings</string>
    <string name="frag_Settings_TV_Settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="frag_Settings_TV_LogOut">Log Out</string>
    <string name="frag_Settings_Save">Save changes</string>
    <string name="hint_change_password_current">Current password</string>
    <string name="hint_change_password_new">New password</string>
    <string name="hint_change_password_confirm">Confirm password</string>
    <string name="permission_alert_dialog_CONTACTS">Contacts permission</string>
    <string name="permission_dialog_CONTACTS_body">Schedly will now request read Contacts permission on your device. This is essential in order for Schedly to work properly!</string>
    <string name="popup_appointment_TV_CancelAppointment">Cancel appointment</string>
    <string name="loginFail">Sign in failed. Check your internet connection!</string>
    <string name="loginFailPasswordIncorrect">Password is incorrect</string>
    <string name="loginFailEmailNotRegistered">Email is not registered. Please sign up</string>
    <string name="loginFailTooManyReq">Too many login attempts! Please try again in a couple of seconds</string>
    <string name="act_Calendar_TV_AddNew">Add New</string>
    <string name="popup_add_Name">Name</string>
    <string name="popup_add_FreeHours">Select a free hour from the list</string>
    <string name="popup_add_Done">Add appointment</string>
    <string name="act_Calendar_TV_Free">Free day</string>
    <string name="sign_in_options_socials">With socials</string>
    <string name="sign_in_button_options_email">With email</string>
    <string name="act_main_TV_SignIn_Extra">SIGN IN</string>
    <string name="image">Background image</string>
    <string name="act_SUWEmail_ET_PhoneNumber">Phone number</string>
    <string name="helpDateSelected">On a selected date, your appointments will be displayed one below another. You can manage them from there</string>
    <string name="helpAddExplained">You can still make appointments manually. You can find your phone numbers by simply typing the number in the fileds. The same goes for contact names. A message will be automatically sent to the client with the information</string>
    <string name="helpEditExplained">You can call directly your client, message him/ her, add to contacts and cancel appointment. By canceling appointment, a message will be sent to the client with the information.</string>
    <string name="settings_appointmentDuration">Duration in minutes</string>
    <string name="calendar_view_MON">MON</string>
    <string name="calendar_view_TUE">TUE</string>
    <string name="calendar_view_WED">WED</string>
    <string name="calendar_view_THU">THU</string>
    <string name="calendar_view_FRI">FRI</string>
    <string name="calendar_view_SAT">SAT</string>
    <string name="calendar_view_SUN">SUN</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="sat">SAT</string>
    <string name="preferences_email_change">Change your email address</string>
    <string name="preferences_password_change">Change your password</string>
    <string name="preferences_phone_number_change">Change your phone number</string>
    <string name="preferences_working_days_change">Change your working days</string>
    <string name="preferences_display_name_change">Change your display name</string>
    <string name="preferences_appointment_duration_change">Change your appointment duration</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preferences_monitoring_disable">Disable SMS monitoring</string>
    <string name="preferences_monitoring_title">Enable/ Disable monitoring</string>
    <string name="preferences_account">Account</string>
    <string name="preferences_help">Help</string>
    <string name="preferences_feedback">Report technical issues or suggest new features</string>
    <string name="preferences_feedback_title">Send feedback</string>
    <string name="settings_bar_title">Settings</string>
    <string name="settings_email_bar_title">Change email</string>
    <string name="settings_password_bar_title">Change password</string>
    <string name="settings_working_days_bar_title">Change working days</string>
    <string name="toast_add_appointment_phone_number">Phone number is required!</string>
    <string name="snackbar_add_appointment_failed">Appointment failed. Please check your connection or submit the error</string>
    <string name="add_appointment_manual_success_beg">You\'ve been scheduled on </string>
    <string name="add_appointment_manual_success_at"> at: </string>
    <string name="add_appointment_manual_success_end">. If something is wrong, please contact me</string>
    <string name="toast_add_appointment_hours">Hour for schedule is required!</string>
    <string name="edit_appointment_cancel">Cancel appointment</string>
    <string name="edit_appointment_cancel_dialog">Do you really want to cancel this appointment? A message will be sent automatically to the client</string>
    <string name="edit_appointment_cancel_message_start">Your appointment on</string>
    <string name="edit_appointment_message_end"> has been canceled</string>
    <string name="edit_appointment_info_app_start">Appointment starts at: </string>
    <string name="preferences_block_list_access">Block List</string>
    <string name="frag_BlockList_TV_Info">Once you block a number, the person which owns it won\'t be able to make schedules anymore through SMS. Schedly will simply ignore the messages</string>
    <string name="frag_blocklist_tv_add">Add to blocked list</string>
    <string name="frag_BlockList_DialogTitle">Remove number from block list</string>
    <string name="frag_BlockList_DialogMessage">Do you really want to unblock this number? It will be able to schedule through SMS again</string>
    <string name="frag_BlockList_TV_Unblock">Unblock</string>
    <string name="frag_BlockList_AddTitle">Block number</string>
    <string name="frag_BlockList_AddMessage">Once you add this number to the block list, it won\'t be able to schedule thourgh SMS anymore</string>
    <string name="dialog_display_name_title">Change display name</string>
    <string name="dialog_login_error_title">Something went wrong</string>
    <string name="dialog_login_error_message">Please check your internet connection or try another method for login</string>
    <string name="dialog_login_error_button">OK</string>
</resources>