<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="account_category"
        app:title="@string/preferences_account">

        <Preference
            app:key="email_change"
            app:title="@string/preferences_email_change"/>
        <Preference
            app:key="password_change"
            android:summary="********"
            app:title="@string/preferences_password_change"/>
        <Preference
            app:key="phoneNumber_change"
            android:title="@string/preferences_phone_number_change"/>
        <Preference
            app:key="workingHours_change"
            android:title="@string/preferences_working_days_change"/>
        <Preference
            app:key="displayName_change"
            android:title="@string/preferences_display_name_change"/>
        <Preference
            app:key="appointmentDuration_change"
            android:title="@string/preferences_appointment_duration_change"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="notification_category"
        app:title="@string/preferences_notifications">

        <SwitchPreference
            app:key="stopNotificationSMSMonitoring"
            app:summary="@string/preferences_monitoring_disable"
            app:title="@string/preferences_monitoring_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="help_category"
        app:title="@string/preferences_help">

        <Preference
            app:key="help_feedback"
            app:summary="@string/preferences_feedback"
            app:title="@string/preferences_feedback_title"/>

    </PreferenceCategory>

    <Preference
        app:key="logout"
        app:title="Log Out"
        android:textColor="#6598db"/>

</PreferenceScreen>
