<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/act_main_CL_Root"
    xmlns:card_view="http://schemas.android.com/tools">

    <ProgressBar
        android:id="@+id/act_main_PB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:translationZ="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/act_main_TV_SignIn"
        style="@style/TextViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_main_TV_SignIn"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/act_main_TV_SignIn_Extra"
        style="@style/TextViewSignUpExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_main_TV_SignIn_Extra"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_main_TV_SignIn" />

    <Button
        android:id="@+id/act_main_BUT_signin_options_socials"
        style="@style/ButtonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/medium_marginT"
        android:layout_marginEnd="16dp"

        android:background="@drawable/button_socials_or_email"
        android:paddingStart="@dimen/btn_signin_medium_paddingSE"
        android:paddingEnd="@dimen/btn_signin_medium_paddingSE"

        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/sign_in_options_socials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_main_TV_SignIn_Extra" />

    <Button
        android:id="@+id/act_main_BUT_signin_options_email"
        style="@style/ButtonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:background="@drawable/button_socials_or_email"
        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/sign_in_button_options_email"

        android:layout_marginTop="@dimen/medium_marginT"
        android:paddingStart="@dimen/btn_signin_medium_paddingSE"
        android:paddingEnd="@dimen/btn_signin_medium_paddingSE"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_main_BUT_signin_options_socials" />

    <TextView
        android:id="@+id/act_main_TV_SingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_main_BUT_signin_options_socials"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/medium_marginT"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/act_main_TV_SingUp"
        android:textColor="#555555"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_main_BUT_signin_options_email" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/set_up_background"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image"/>
</androidx.constraintlayout.widget.ConstraintLayout>