<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_login_error_TV_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textSize="28sp"
        android:layout_marginTop="32dp"
        android:text="@string/dialog_login_error_title"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/dialog_login_error_TV_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textSize="22sp"
        android:layout_marginTop="32dp"
        android:text="@string/dialog_login_error_message"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/dialog_login_error_TV_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_login_error_button"
        android:textColor="@color/colorText"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_login_error_ok"
        android:paddingStart="@dimen/btn_signin_medium_paddingSE"
        android:paddingEnd="@dimen/btn_signin_medium_paddingSE"

        app:layout_constraintTop_toBottomOf="@id/dialog_login_error_TV_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:onClick="dismissDialogError"
        android:layout_marginBottom="24dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>