<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/act_main_TIL_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:hint="@string/hint_login_email"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxCornerRadiusBottomEnd="@dimen/input_button_border_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_button_border_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_button_border_radius"
        app:boxCornerRadiusTopStart="@dimen/input_button_border_radius"
        app:errorEnabled="true"
        android:layout_above="@id/act_main_TIL_password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/act_main_TIET_email"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/act_main_TIL_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_login_password"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxCornerRadiusBottomEnd="@dimen/input_button_border_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_button_border_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_button_border_radius"
        app:boxCornerRadiusTopStart="@dimen/input_button_border_radius"
        app:errorEnabled="true"
        android:layout_above="@id/act_main_BUT_signin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/act_main_TIET_password"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/act_main_BUT_signin"
        style="@style/ButtonSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_submit"
        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/sign_in_button" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/act_main_BUT_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:stateListAnimator="@animator/button_click_animator" />

    <Button
        android:id="@+id/act_main_BUT_Google"
        style="@style/ButtonSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/buttonFacebookLogin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/common_google_signin_btn_text_light"
        android:text="@string/act_main_google"
        android:textColor="#757575"
        />
    <!--<com.google.android.gms.common.SignInButton-->
        <!--android:id="@+id/act_main_BUT_Google"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/buttonFacebookLogin"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:stateListAnimator="@animator/button_click_animator" />-->


    <TextView
        android:id="@+id/act_main_TV_Register"
        style="@style/RegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_main_BUT_Google"
        android:layout_centerHorizontal="true"
        android:text="@string/register_text" />

    <Button
        android:id="@+id/act_main_BUT_signup"
        style="@style/ButtonRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_main_TV_Register"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_submit"
        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/register_button_main" />

</RelativeLayout>