<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextViewSignUp"
        android:id="@+id/act_main_TV_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_main_TV_SignIn"/>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/act_main_CV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:elevation="1dp"
        android:layout_above="@id/act_main_BUT_signin">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@android:color/white">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_login_email"
                    android:textColor="@color/colorSetUp"
                    />
            </androidx.cardview.widget.CardView>

            <!--<com.google.android.material.textfield.TextInputLayout-->
                <!--android:id="@+id/act_main_TIL_email"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->

                <!--android:hint="@string/hint_login_email"-->
                <!--android:textColorHint="@color/colorPrimaryDark"-->
                <!--app:errorEnabled="true"-->
                <!--&gt;-->

                <!--<com.google.android.material.textfield.TextInputEditText-->
                    <!--android:id="@+id/act_main_TIET_email"-->
                    <!--style="@style/InputEditText"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content" />-->

            <!--</com.google.android.material.textfield.TextInputLayout>-->


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/act_main_TIL_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login_password"
                android:textColorHint="@color/colorPrimaryDark"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_main_TIET_password"
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/act_main_BUT_signin"
        style="@style/ButtonSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_submit"
        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/sign_in_button" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/act_main_BUT_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:stateListAnimator="@animator/button_click_animator"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/act_main_BUT_Facebook"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        style="@style/ButtonFacebook"
        android:layout_below="@id/act_main_BUT_signin"
        android:onClick="doLoginFacebook"
        android:stateListAnimator="@animator/button_click_animator" />

    <Button
        android:id="@+id/act_main_BUT_Google"
        android:layout_below="@id/act_main_BUT_Facebook"
        style="@style/ButtonGoogle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:stateListAnimator="@animator/button_click_animator" />


    <TextView
        android:id="@+id/act_main_TV_ForgotPassword"
        style="@style/ForgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_main_BUT_Google"
        android:text="@string/act_main_TV_ForgotPassword" />

    <Button
        android:id="@+id/act_main_BUT_signup"
        style="@style/ButtonRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_main_TV_ForgotPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_submit"
        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/register_button_main" />

</RelativeLayout>